# guard-quote

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  docker-compose.yml
.continue/: config.json  docs.md
.github/: CODEOWNERS  dependabot.yml
aws-infrastructure/: README.md  master-stack.yaml
backend/: .env.example  Dockerfile  README.md  biome.json  drizzle.config.ts  package-lock.json  package.json  server-node.ts
cloudflare/: README.md
docs/: BASTION.md  CHANGELOG-2026-02-06.md  DEMO-SCRIPT.md  GIT-WORKFLOW.md  GUARDQUOTE-V2-DEPLOYMENT.md  IAM-ACCESS-CONTROL.md  ICAM-REVIEW.md  PROJECT-BOARD-UPDATES-2026-02-09.md  QUICKSTART-ISAIAH.md  README.md  ROADMAP.md  SDPS-PRESENTATION-DRAFT.md  SECOPS-FINDINGS-2026-03-01.md  (+8 more)
ml-engine/: .env.example  Dockerfile  README.md  pyproject.toml
ml-engine/data/: seed_2026.sql
ml-engine/data/processed/: training_data_2026.csv
ml-engine/models/trained/: guardquote_models.pkl  model_metadata.txt
ml-engine/proto/: README.md  ml_engine.proto
ml-engine/scripts/: generate_grpc.sh  generate_training_data_2026.py  ingest_ai_spec.py  train_from_csv.py  train_models.py
ml-engine/src/: __init__.py  grpc_servicer.py  main.py  server.py
ml-engine/src/api/: routes.py
ml-engine/src/config/: settings.py
ml-engine/src/data/: __init__.py  schemas.py
ml-engine/src/grpc_generated/: __init__.py  ml_engine_pb2.py  ml_engine_pb2.pyi  ml_engine_pb2_grpc.py
ml-engine/src/models/: __init__.py  pricing_engine.py  schemas.py  trained_predictor.py
ml-engine/tests/: test_grpc.py  test_health.py
(+201 files in other folders)
